Codigo Ejemplo/1. Principios Universales de Diseño Software/1.2 Programa a una interfaz/CompaniaDeSoftware/src/main/java/org/example/bad/Arquitecto.java
package org.example.bad;

public class Arquitecto {

    public String diseñarArquitectura(){
        return "Arquitectura de la aplicacion definida con exito";
    }
}
